k8s/apps/public/raneto.yaml
# Create Raneto Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raneto
  namespace: public
  labels:
    app.kubernetes.io/name: raneto
    app.kubernetes.io/part-of: raneto
    app.kubernetes.io/release: stable
  annotations:
    a8r.io/description: "Raneto is an open source Knowledgebase platform that uses static Markdown files to power your Knowledgebase."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangabit/antennae"
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: raneto-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: raneto-web
        app.kubernetes.io/part-of: raneto
    spec:
      containers:
      - name: raneto-web
        image: lscr.io/linuxserver/raneto
        volumeMounts:
        - mountPath: /config
          name: cfg-raneto
          subPath: cfg/raneto
        resources:
          requests:
            memory: 512Mi
            cpu: "1"
          limits:
            memory: 2Gi
            cpu: "2"
      volumes:
        - name: cfg-raneto
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_cfg
            readOnly: false
---
# Create Raneto Service
apiVersion: v1
kind: Service
metadata:
  name: raneto-service
  namespace: public
  labels:
    app.kubernetes.io/name: raneto-service
    app.kubernetes.io/part-of: raneto
spec:
  selector:
    app.kubernetes.io/name: raneto-web
  ports:
    - port: 3000
      name: raneto-http

---
# Create Raneto IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: raneto-ingress
  namespace: public
  labels:
    app.kubernetes.io/name: raneto-ingress
    app.kubernetes.io/part-of: raneto
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kb.public.madeof.glass`)
      kind: Rule
      middlewares:
      - name: secure-auth
        namespace: public
      services:
        - name: raneto-service
          port: raneto-http
  tls:
    certResolver: letsencrypt
